--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Vubuntu minimal",
     "description": "Ubuntu - NoVNC, refer readme for more info.",
-    "repository": "https://github.com/vital987/vubuntu.git",
+    "repository": "https://github.com/dudefromhell/vuber.git",
     "logo": "https://raw.githubusercontent.com/vital987/vubuntu/master/assets/icons/64x64.png",
     "keywords": ["docker","ubuntu", "vscode", "novnc", "firefox", "brave", "fluxbox", "linux", "remote", "ssh", "vnc", "vubuntu"],
     "stack": "container",
